# fantrax_assistant

./: .gitignore  README.md  pyproject.toml
data/: league_config.json
src/fantrax_assistant/: colors.py  completion.py  config.py  draft.py  draft_state.py  search.py  suggest.py
src/fantrax_assistant/scrapers/: __init__.py  adp_scraper.py  cli.py  fdr_scraper.py  injury_scraper.py  recent_form_scraper.py  stat_scraper.py  understat.py
src/fantrax_draft_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/web/: main.py
src/web/static/: styles.css
src/web/templates/: base.html  index.html  player_profile.html  team.html
