[project]
name = "fantrax-draft-assistant"
version = "0.1.0"
description = "Fantasy soccer draft assistant for Fantrax leagues"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "typer>=0.20.1",
]

[project.scripts]
draft = "fantrax_assistant.draft:app"
scrape = "fantrax_assistant.scrapers.cli:scrape_cli"
search = "fantrax_assistant.search:app"
