[project]
name = "fantrax-draft-assistant"
version = "0.1.0"
description = "Fantasy soccer draft assistant for Fantrax leagues"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "typer>=0.20.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "soccerdata>=1.8.2",
    "matplotlib>=3.10.8",
    "plotly>=6.5.0",
    "setuptools>=80.9.0",
    "scipy>=1.16.3",
    "understatapi>=0.1.3",
    "pandas>=2.2.2",
    "redis>=5.0.0",
]

[project.scripts]
draft = "fantrax_assistant.draft:app"
scrape = "fantrax_assistant.scrapers.cli:scrape_cli"
search = "fantrax_assistant.search:app"
